codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Working (0s • esc to interrupt) · read -- tok/s · write -- tok/s

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.

› Ask SolaiAgent to do anything

  gpt-5.5 default · /tmp/project
